# aima-mcp

./: .gitignore  AGENTS.md  backend-appspec.yaml  docker-compose.yml  frontend-appspec.yaml  iac_appspec_example.yaml  iac_desired_state.md  mcphero_competitor_analysis.md  readme.md
backend/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 1768120641_initial.py  1768120642_add_mcp_models.py  1768120643_add_tier_and_auth_columns.py  1768120644_add_deployment_model.py  1768288252_mcp_server.py  1768309806_customer_id_as_string.py  1768419589_add_wizard_step_to_mcp.py  1768762302_initial_v2.py  1768931365_major_state_update.py  1768947222_add_generating_states_to_setup_status.py  1768998645_add_api_keys_table.py  1769500001_rename_api_keys_to_static_api_keys.py  1769500002_create_oauth_tables.py  1773568014_create_org_api_key_table.py  1774022400_add_gathering_requirements_status.py
backend/src/: settings.py
backend/src/core/prompts/: action_suggestion_prompt.yaml  step_0_wizard_chat.yaml  step_1_tool_refinement.yaml  step_1_tool_suggestion.yaml  step_2_env_var_refinement.yaml  step_2_env_var_suggestion.yaml  step_4_code_generation.yaml  (+1 more)
backend/src/infrastructure/: db.py
backend/src/services/: __init__.py  chat_service.py  mcp_generator.py
backend/tests/: .env.test  conftest.py  fixtures.py  test_compile_server_tools.py  test_http_tools.py  test_shared_mcp_runtime.py  test_tool_loader_schema.py  test_wizard_api.py  test_wizard_steps.py  wizard_fixtures.py
(+545 files in other folders)
