[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "fastmcp>=2.0.0",
    "greenlet>=3.3.0",
    "httpx>=0.28.0",
    "logfire>=4.17.0",
    "loguru>=0.7.3",
    "openai>=2.15.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.45",
    "sqlalchemy-utils>=0.42.1",
    "urllib3>=2.6.3",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "psycopg2-binary>=2.9.11",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-anyio>=0.0.0",
    "ruff>=0.14.11",
]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
anyio_backends = ["asyncio"]
